# ADDY-HQ

./: .env.example  README.md  docker-compose.yml  package.json  pyproject.toml  requirements.txt  run_api.py  run_bot.py
addy-ai-system/: README.md
addy-ai-system/docs/: architecture.md
app/: __init__.py  config.py  database.py  main.py  models.py  schemas.py
app/core/: dependencies.py  encryption.py  exceptions.py  guards.py  jwt_utils.py  request_context.py
app/middleware/: http.py
app/models/: __init__.py
app/repositories/: access_repository.py  audit_repository.py  auth_repository.py  bot_config_repository.py  customer_identity_repository.py  guild_repository.py  settings_repository.py  user_repository.py  users_repository.py
app/routes/: __init__.py  admin.py  auth.py  bot.py  guilds.py  (+3 more)
bot/: __init__.py  bot.py  commands_sync.py  loader.py
database/: init_db.py  seed_data.py  seed_offers.py  seed_promo_codes.py
docs/: api-routes.md  architecture.md  bot-commands.md  dashboard-pages.md  deployment.md  premium-plans.md
scripts/: deploy.sh  dev_all.sh  start_api.sh  start_bot.sh  start_dashboard.sh  start_workers.sh
shared/: __init__.py  config.py  constants.py  date_utils.py  enums.py  exceptions.py  helpers.py  id_generator.py  logger.py  permissions.py  response_builder.py  security.py  trial_utils.py  validators.py
tests/: test_api.py
workers/: analytics_worker.py  audit_worker.py  cleanup_worker.py  notifications_worker.py  offer_expiry_worker.py  premium_expiry_worker.py  promo_usage_worker.py  trial_expiry_worker.py  youtube_worker.py
(+106 files in other folders)
